RESOLVED FIXED200905
[JSC] Array.prototype.toString should not get "join" function each time
https://bugs.webkit.org/show_bug.cgi?id=200905
Summary [JSC] Array.prototype.toString should not get "join" function each time
Yusuke Suzuki
Reported 2019-08-19 17:20:28 PDT
We should avoid it by setting watchpoint.
Attachments
Patch (29.02 KB, patch)
2019-08-20 02:03 PDT, Yusuke Suzuki
no flags
Patch (29.00 KB, patch)
2019-08-20 02:06 PDT, Yusuke Suzuki
no flags
Patch (29.05 KB, patch)
2019-08-20 02:09 PDT, Yusuke Suzuki
no flags
Patch (29.06 KB, patch)
2019-08-20 02:15 PDT, Yusuke Suzuki
no flags
Patch (29.29 KB, patch)
2019-08-20 02:18 PDT, Yusuke Suzuki
mark.lam: review+
Yusuke Suzuki
Comment 1 2019-08-20 02:03:10 PDT
Yusuke Suzuki
Comment 2 2019-08-20 02:06:30 PDT
Yusuke Suzuki
Comment 3 2019-08-20 02:09:30 PDT
Radar WebKit Bug Importer
Comment 4 2019-08-20 02:15:21 PDT
Yusuke Suzuki
Comment 5 2019-08-20 02:15:36 PDT
Yusuke Suzuki
Comment 6 2019-08-20 02:18:26 PDT
Mark Lam
Comment 7 2019-08-20 07:48:43 PDT
Comment on attachment 376758 [details] Patch Where is the code that fires arrayJoinWatchpointSet()?
Yusuke Suzuki
Comment 8 2019-08-20 09:44:58 PDT
(In reply to Mark Lam from comment #7) > Comment on attachment 376758 [details] > Patch > > Where is the code that fires arrayJoinWatchpointSet()? ObjectPropertyChangeAdaptiveWatchpoint is created for this watchpointset. It will fire.
Mark Lam
Comment 9 2019-08-20 09:50:01 PDT
(In reply to Yusuke Suzuki from comment #8) > (In reply to Mark Lam from comment #7) > > Comment on attachment 376758 [details] > > Patch > > > > Where is the code that fires arrayJoinWatchpointSet()? > > ObjectPropertyChangeAdaptiveWatchpoint is created for this watchpointset. It > will fire. Ah, I see. I missed that.
Mark Lam
Comment 10 2019-08-20 09:50:17 PDT
Comment on attachment 376758 [details] Patch r=me
Yusuke Suzuki
Comment 11 2019-08-20 10:37:11 PDT
Note You need to log in before you can comment on or make changes to this bug.